--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="css/button.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+
+    <script src="https://kit.fontawesome.com/718f6df060.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -47,37 +51,40 @@
             <div>
                 <p>Olá, 👋 meu nome é</p>
                 <h1>Luiz Fernando</h1>
-                <p>Sou um apaixonado por programação front-end/back-end, <br> criar sites é uma arte</p>
+                <p>Sou um apaixonado por programação front-end/back-end, <br> criar sites é uma arte....</p>
             </div>
 
-            <img src="img/User-Avatar-Profile-Clip-Art-Transparent-PNG.png" alt="">
+            <img src="img/img-luiz.ng.png" alt="">
         </div>
 
         <h4><a href="">Meus Projetos</a></h4>
 
         <div class="projetos">
-            <a href="">
 
-            </a>
 
             <div>
                 <a href=""><img class="img-moderno-movies" src="img/Projetos/Moderno-Movies.png" alt=""></a>
-                <p>Moderno Movies <a href="">Clique aqui para Ver...</a></p>
+                <p>Moderno Movies </p>
             </div>
 
             <div>
                 <a href=""><img class="img-zennor" src="img/Projetos/Zennor.png" alt=""></a>
-                <p>Zennor <a href="">Clique aqui para Ver...</a></p>
+                <p>Zennor </p>
+            </div>
+
+            <div>
+                <a href=""><img class="img-etec-redes-1" src="img/Projetos/Etec-Redes0.png" alt=""></a>
+                <p>Etec Redes 01 </p>
             </div>
 
             <div>
                 <a href=""><img class="img-etec-redes-1" src="img/Projetos/Etec-Redes1.png" alt=""></a>
-                <p>Etec Redes <a href="">Clique aqui para Ver...</a></p>
+                <p>Etec Redes 02 </p>
             </div>
 
             <div>
                 <a href=""><img class="img-site-senai-01" src="img/Projetos/Senai-Site-01.png" alt=""></a>
-                <p>Site Teste <a href="">Clique aqui para Ver...</a></p>
+                <p>Site Teste</p>
             </div>
 
         </div>
@@ -95,8 +102,7 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui vero fugit dolore, sit veritatis
                         aliquid id repellendus quo labore sapiente sed provident eos architecto culpa est, in ullam
                         exercitationem! Accusantium?Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-                        temporibus quam iste consequatur ullam cumque dolorum illo, delectus voluptatum voluptatem
-                        perferendis officiis ipsum incidunt in est magnam eos deserunt quisquam.</p>
+                        temporibus </p>
                 </div>
                 <div>
                     <img src="img/icons/java-icon.png" alt="">
@@ -104,8 +110,7 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui vero fugit dolore, sit veritatis
                         aliquid id repellendus quo labore sapiente sed provident eos architecto culpa est, in ullam
                         exercitationem! Accusantium?Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-                        temporibus quam iste consequatur ullam cumque dolorum illo, delectus voluptatum voluptatem
-                        perferendis officiis ipsum incidunt in est magnam eos deserunt quisquam.</p>
+                        temporibus </p>
                 </div>
 
                 <div>
@@ -114,22 +119,66 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui vero fugit dolore, sit veritatis
                         aliquid id repellendus quo labore sapiente sed provident eos architecto culpa est, in ullam
                         exercitationem! Accusantium?Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-                        temporibus quam iste consequatur ullam cumque dolorum illo, delectus voluptatum voluptatem
-                        perferendis officiis ipsum incidunt in est magnam eos deserunt quisquam.</p>
+                        temporibus </p>
                 </div>
             </div>
 
-            <div class="social-media">
-                <img src="" alt="">
+            <hr>
 
-                <div class="icons">
-                    <a href="#" class="fb"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="insta"><i class="fab fa-instagram"></i></a>
-                    <a href="#" class="git"><i class="fab fa-github"></i></a>
-                    <a href="#" class="yt"><i class="fab fa-youtube"></i></a>
-                </div>
+            <div class="midias">
+                <img src="img/cartoon-png.png" alt="">
+
+                <p>Minhas Redes Sociais</p>
+
             </div>
+
+
+            <div class="wrapper">
+                <div class="button">
+                    <a href="">
+                    <div class="icon">
+                        <i class="fab fa-facebook-f"></i>
+                    </div>
+                    <span>Facebook</span>
+                </a>
+                </div>
+                <div class="button">
+                    <a href="">
+                    <div class="icon">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </div>
+                    <span>Whatsapp</span>
+                </a>
+                </div>
+                <div class="button">
+                    <a href="">
+                    <div class="icon">
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                    <span>Instagram</span>
+                </a>
+                </div>
+                <div class="button">
+                    <a href="">
+                    <div class="icon">
+                        <i class="fab fa-github"></i>
+                    </div>
+                    <span>Github</span>
+                </a>
+                </div>
+
+                
+                    <div class="button">
+                        <a href="">
+                        <div class="icon">
+                            <i class="fa-brands fa-discord"></i>
+                        </div>
+                        <span>Discord</span>
+                    </a>
+                    </div>
+                
+            </div>
+
         </div>
 
 
